--- a/example/example_ring_of_the_grammarain_ukrainian.yaml
+++ b/example/example_ring_of_the_grammarain_ukrainian.yaml
@@ -1,6 +1,7 @@
 - title: Перстень Граматики
   subtitle: Рідкісний
   image_path: Перстень_Граматики.png
+  artist: nicepng.com
   description: 
     - Поки ви носите цей перстень, ви можете замінити одну літеру в назві чарів на іншу, щоб створити абсолютно новий ефект.
   category: Чудесний предмет
